<resources>
    <string name="app_name">LifeCycle</string>
    <string name="tab_title_list">List</string>
    <string name="tab_title_stat">Statistics</string>
    <string name="tab_title_setting">Setting</string>
    <string name="create_event_toolbar_title">Create event</string>
    <string name="event_title_hint">Event name</string>
    <string name="event_start_title">Start</string>
    <string name="event_end_title">End</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
