<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:layout_marginBottom="@dimen/app_toolbar_bottom_margin"
        android:background="@color/color_app_default"
        app:titleTextAppearance="@style/style_action_bar_text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_toolbar"
        android:paddingLeft="@dimen/layout_padding"
        android:paddingRight="@dimen/layout_padding">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/event_name_edittext"
            style="@style/style_edittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/event_edittext_height"
            android:hint="@string/event_title_hint"
            android:theme="@style/style_edittext" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_name_edittext"
            android:layout_marginTop="@dimen/event_time_layout_marginTop"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/event_time_padding">

                <TextView
                    android:id="@+id/event_start_title"
                    style="@style/style_time_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/event_start_title" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/event_start_title"
                    android:layout_marginTop="@dimen/event_time_padding">

                    <ImageView
                        android:id="@+id/event_start_imageview"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/event_time_textview_height"
                        android:background="@drawable/ripple_event_time_background"
                        android:scaleType="fitXY" />

                    <TextView
                        android:id="@+id/event_start_textview"
                        style="@style/style_time_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:clickable="false" />
                </RelativeLayout>
            </RelativeLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="0.1"
                android:background="@drawable/ic_next" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/event_time_padding">

                <TextView
                    android:id="@+id/event_end_title"
                    style="@style/style_time_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/event_end_title" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/event_end_title"
                    android:layout_marginTop="@dimen/event_time_padding">

                    <ImageView
                        android:id="@+id/event_end_imageview"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/event_time_textview_height"
                        android:background="@drawable/ripple_event_time_background"
                        android:scaleType="fitXY" />

                    <TextView
                        android:id="@+id/event_end_textview"
                        style="@style/style_time_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:clickable="false" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/dark_white"
        android:gravity="center_vertical">

        <RelativeLayout
            android:id="@+id/button_cancel_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/button_ok_layout">

            <TextView
                android:id="@+id/button_cancel"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_button_background"
                android:text="@string/cancel" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button_ok_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/button_ok"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_button_background"
                android:text="@string/save" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>